--- a/package.json
+++ b/package.json
@@ -18,51 +18,51 @@
     "build:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^3.0.1",
-    "@electron-toolkit/utils": "^4.0.0",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.6",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
+    "@electron-toolkit/preload": "3.0.1",
+    "@electron-toolkit/utils": "4.0.0",
+    "@radix-ui/react-avatar": "1.1.3",
+    "@radix-ui/react-checkbox": "1.1.4",
+    "@radix-ui/react-context-menu": "2.2.6",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-separator": "1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@tailwindcss/vite": "^4.1.3",
-    "@tanstack/react-table": "^8.21.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "electron-store": "^10.0.1",
-    "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2",
-    "lucide-react": "^0.487.0",
-    "next-themes": "^0.4.6",
-    "pocketbase": "^0.25.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.5.0",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.1.0",
-    "tailwindcss": "^4.1.3",
-    "tw-animate-css": "^1.2.5"
+    "@radix-ui/react-tooltip": "1.1.8",
+    "@tailwindcss/vite": "4.1.3",
+    "@tanstack/react-table": "8.21.2",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
+    "electron-store": "10.0.1",
+    "jspdf": "3.0.1",
+    "jspdf-autotable": "5.0.2",
+    "lucide-react": "0.487.0",
+    "next-themes": "0.4.6",
+    "pocketbase": "0.25.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router": "7.5.0",
+    "sonner": "2.0.3",
+    "tailwind-merge": "3.1.0",
+    "tailwindcss": "4.1.3",
+    "tw-animate-css": "1.2.5"
   },
   "devDependencies": {
-    "@electron-toolkit/eslint-config": "^2.0.0",
-    "@electron-toolkit/eslint-config-prettier": "^3.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "electron": "^35.0.3",
-    "electron-builder": "^25.1.8",
-    "electron-vite": "^3.1.0",
-    "eslint": "^9.23.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "prettier": "^3.5.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vite": "^6.2.3"
+    "@electron-toolkit/eslint-config": "2.0.0",
+    "@electron-toolkit/eslint-config-prettier": "3.0.0",
+    "@vitejs/plugin-react": "4.3.4",
+    "electron": "35.0.3",
+    "electron-builder": "25.1.8",
+    "electron-vite": "3.1.0",
+    "eslint": "9.23.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.19",
+    "prettier": "3.5.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "vite": "6.2.3"
   }
 }
