--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-separator": "1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "1.1.8",
     "@tailwindcss/vite": "4.1.3",
     "@tanstack/react-table": "8.21.2",
@@ -44,6 +45,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "7.5.0",
+    "recharts": "^2.15.2",
     "sonner": "2.0.3",
     "tailwind-merge": "3.1.0",
     "tailwindcss": "4.1.3",
