--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "1.1.8",
     "@tailwindcss/vite": "4.1.3",
-    "@tanstack/react-table": "8.21.2",
+    "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "electron-store": "10.0.1",
+    "framer-motion": "^12.7.3",
     "jspdf": "3.0.1",
     "jspdf-autotable": "5.0.2",
     "lucide-react": "0.487.0",
