--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-label": "2.1.2",
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-separator": "1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -53,7 +54,8 @@
     "sonner": "2.0.3",
     "tailwind-merge": "3.1.0",
     "tailwindcss": "4.1.3",
-    "tw-animate-css": "1.2.5"
+    "tw-animate-css": "1.2.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "2.0.0",
